kubernetes.tf
resource "kubernetes_namespace" "test" {
  metadata {
    name = "nginx"
  }
}
resource "kubernetes_deployment" "test" {
  metadata {
    name      = "nginx"
    namespace = kubernetes_namespace.test.metadata.0.name
  }
  spec {
    replicas = 2
    selector {
      match_labels = {
        app = "MyTestApp"
      }
    }
    template {
      metadata {
        labels = {
          app = "MyTestApp"
        }
      }
      spec {
        container {
          image = "nginx"
          name  = "nginx-container"
          port {
            container_port = 80
          }
        }
      }
    }
  }
}
resource "kubernetes_service" "test" {
  metadata {
    name      = "nginx"
    namespace = kubernetes_namespace.test.metadata.0.name
  }
  spec {
    selector = {
      app = kubernetes_deployment.test.spec.0.template.0.metadata.0.labels.app
    }
    type = "NodePort"
    port {
      node_port   = 30201
      port        = 80
      target_port = 80
    }
  }
}

//data "kubernetes_all_namespaces" "allns" {}

//output "all-ns" {
//  value = data.kubernetes_all_namespaces.allns.namespaces
//}
//
//output "ns-present" {
//  value = contains(data.kubernetes_all_namespaces.allns.namespaces, "kube-system")
//}

//data "kubernetes_pod" "test" {
//  metadata {
//    name = "nginx-86c669bff4-gfzpc"
//    namespace = "nginx"
//  }
//}

//output "nginx" {
//  value = data.kubernetes_pod.test
//}
